syntax = "proto3";

package aeropay;

option java_multiple_files = true;
option java_package = "com.grpctest.grpc";

import "google/api/annotations.proto";

message PingRequest {
    string ping = 1;
}

message PongResponse {
    string pong = 1;
}

service PingPongService {
    rpc ping(PingRequest) returns (PongResponse);
}


	
